# python-machine-learning

./: LICENSE  README.md  adaline.py  ch_02.ipynb  ch_03.ipynb  perceptron.py  perceptron_iris.ipynb  pyproject.toml
