[tool.poetry]
name = "python-machine-learning"
version = "0.1.0"
description = "Exercises from the book \"Python Machine Learning\" by Sebastian Raschka."
authors = ["Jan CW Kroeze <jcwkroeze@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
pandas = "^0.25.1"
matplotlib = "^3.1"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
